<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.snuzj.cupcakeapp.model.OrderViewModel" />
        <variable
            name="flavorFragment"
            type="com.snuzj.cupcakeapp.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FlavorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
        <RadioGroup
            android:id="@+id/flavorOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/vanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                android:text="@string/vanilla"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                android:text="@string/chocolate"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/red_velvet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                android:text="@string/red_velvet"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/salted_caramel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                android:text="@string/salted_caramel"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                android:text="@string/coffee"/>
        </RadioGroup>
        <View
            android:id="@+id/divider"
            style="@style/Widget.Cupcake.Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flavorOptions"/>
        <TextView
            android:id="@+id/subtotal"
            style="@style/Widget.Cupcake.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{@string/subtotal_price(viewModel.price)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Subtotal: $5.00"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:textColor="@color/pink_600"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> flavorFragment.cancelOrder()}"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next_button"
            android:text="@string/cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:textColor="@color/white"
            android:background="@color/pink_600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> flavorFragment.goToNextScreen()}"
            app:layout_constraintTop_toBottomOf="@+id/subtotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            android:text="@string/next"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>